[gd_scene load_steps=5 format=3 uid="uid://dseiori76psbj"]

[ext_resource type="Script" path="res://Objects/Scripts/Objective.gd" id="1_5ts7x"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_kbmgx"]
height = 4.0
radius = 7.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2dpnk"]
transparency = 1
blend_mode = 1
shading_mode = 0
albedo_color = Color(0.239216, 0.239216, 0.239216, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_xrjta"]
material = SubResource("StandardMaterial3D_2dpnk")
top_radius = 7.0
bottom_radius = 7.0
height = 4.0

[node name="Objective" type="Node3D"]
script = ExtResource("1_5ts7x")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CylinderShape3D_kbmgx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D"]
mesh = SubResource("CylinderMesh_xrjta")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ObjectiveCountdown" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 28.8
anchor_right = 28.8
offset_left = -676.0
offset_top = 27.0
offset_right = -472.0
offset_bottom = 67.0
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
